--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,58 +1,149 @@
 body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  overflow: hidden;
 }
 .parent{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(to right, #4568dc, #b06ab3);
+color: #D7D7EF;
+font-family: 'Lato', sans-serif;
+padding: 50px;
 }
-.drop-zone {
-    max-width: 250px;
-    height: 150px;
-    padding: 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-family: "Quicksand", sans-serif;
-    font-weight: 500;
-    font-size: 20px;
-    cursor: pointer;
-    color: #cccccc;
-    border: 4px dashed #76de50;
-    border-radius: 10px;
-  }
-  
 
-  .drop-zone--over {
-    border-style: solid;
-  }
-  
-  .drop-zone__input {
-    display: none;
-  }
-  
-  .drop-zone__thumb {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    overflow: hidden;
-    background-color: #cccccc;
-    background-size: cover;
-    position: relative;
-  }
-   
-  .drop-zone__thumb::after {
-    content: attr(data-label);
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 5px 0;
-    color: #ffffff;
-    background: rgba(0, 0, 0, 0.75);
-    font-size: 14px;
-    text-align: center;
-  }
+
+h2 {
+  margin: 50px 0;
+}
+
+section {
+  flex-grow: 1;
+}
+
+.file-drop-area {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 450px;
+  max-width: 100%;
+  padding: 25px;
+  border: 5px dashed rgba(255, 255, 255, 0.4);
+  border-radius: 8px;
+  transition: 0.2s;
+}
+.file-drop-area:active {
+background-color: rgba(255, 255, 255, 0.05);
+}
+
+.fake-btn {
+  flex-shrink: 0;
+  background-color: rgba(255, 255, 255, 0.04);
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 3px;
+  padding: 8px 15px;
+  margin-right: 10px;
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.file-msg {
+  font-size: small;
+  font-weight: 300;
+  line-height: 1.4;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.file-input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  cursor: pointer;
+  opacity: 0;
+}
+.file-input:focus {
+outline: none;
+}
+
+#text-area {
+  width: 75%;
+  height: 200px;
+  margin-top: 50px;
+}
+
+#input-text {
+  width: 65%;
+  height: 30px;
+  margin-right: 5px;
+}
+
+.send-text {
+  width: 35px;
+  height: 30px;
+}
+/* .output{
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  display: flex;
+
+} */
+textarea{
+  align-items: center;
+  justify-content: center;
+}
+.user-input{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 10px;
+  position: fixed;
+}
+
+.chat {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.message {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.message p {
+  background-color: #007bff;
+  color: #fff;
+  padding: 5px;
+  border-radius: 10px;
+  margin: 0;
+  max-width: 70%;
+}
+
+.message.sent p {
+  color: #000000;
+  font-weight: 500;
+  font-size: large;
+  padding: 8px;
+  align-self: flex-start;
+  background-color: #6be06f;
+}
+
+.message.received p {
+  background-color: #000000;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: large;
+  padding: 8px;
+  align-self: flex-end;
+}
