--- a/templates/index.html
+++ b/templates/index.html
@@ -9,10 +9,13 @@
 </head>
 <body>
     <div class="parent">
-    <div class="drop-zone">
-        <span class="drop-zone__prompt">Drop file here or click to upload</span>
-        <input type="file" name="myFile" class="drop-zone__input">
-      </div>
+        <div class="file-drop-area">
+            <span class="fake-btn">Choose files</span>
+            <span class="file-msg">or drag and drop files here</span>
+            <input class="file-input" type="file" id="pdf-input">
+        </div>
+        <button id="upload-button">Upload</button>
+        <p id="output"></p>   
     </div>
 
 
