--- a/templates/chat.html
+++ b/templates/chat.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-HACKFEST</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/chatstyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     
 </head>
@@ -28,6 +28,6 @@
 
 
 
-    <script src="../static/js/index.js"></script>
+    <script src="../static/js/chat.js"></script>
 </body>
 </html>
