landing page done

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,33 @@
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
+    <div class="introduction">
+        <div class="content">
+        <h1>Get the Answer to Your Question in Seconds!</h1>
+        <h3>Our website uses AI to read and answer your PDFs in seconds. Just upload your PDF and we'll do the rest.</h3>
+
+        <p>Have you ever had a question that you just couldn't find the answer to? Maybe you were looking for a specific piece of information in a PDF, but it was taking forever to find it. Or maybe you were trying to learn something new, but the textbook was just too dense.
+            <br>
+            If you've ever been in one of these situations, then you know how frustrating it can be. But what if there was a way to get the answer to your question in seconds?
+            <br>
+            That's where our website comes in. We use AI to read and answer your PDFs in seconds. Just upload your PDF and we'll do the rest.
+            <br>
+            Here's how it works:
+            <br>
+            <ul>
+                <li>Upload your PDF to our website. <br></li>
+                <li>Enter your question in the text box. <br></li>
+                <li> Click "Answer." <br></li>
+            </ul>
+
+            That's it! We'll scan your PDF and provide you with the answer to your question in seconds. <br>
+             <br>
+            Our website is perfect for students, researchers, and anyone else who needs to find information quickly. So why wait? Upload your PDF and get the answer to your question today!</p>
+        </div>
+        <div class="image">
+            <img src="../static/images/g2-removebg-preview.png" class="geni">
+        </div>
+    </div>
     <div class="parent">
         <div class="file-drop-area">
             <span class="fake-btn">Choose files</span>
