--- a/static/css/chatstyle.css
+++ b/static/css/chatstyle.css
@@ -1,10 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: hidden;
-}
-
+    font-family: 'Poppins', sans-serif;
+  }
 #input-text {
     width: 65%;
     height: 30px;
