--- a/static/css/style.css
+++ b/static/css/style.css
@@ -87,6 +87,22 @@ outline: none;
  }
 
  
+header{
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  position: fixed;
+  justify-content: center;
+  font-size: 25px;
+  font-weight: 600;
+  background: rgba( 255, 255, 255, 0.3 );
+  backdrop-filter: blur( 2.5px );
+  -webkit-backdrop-filter: blur( 2.5px );
+
+  border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+
 
  
 .introduction{
