update index page with file upload

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,8 @@
             <span class="file-msg">or drag and drop files here</span>
             <input class="file-input" type="file" id="pdf-input">
         </div>
-        <button id="upload-button">Upload</button>
-        <p id="output"></p>   
+        <!-- <button id="upload-button">Upload</button>
+        <p id="output"></p>    -->
     </div>
 
 
