update and integrate chat page

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -12,21 +12,17 @@
 <body>
     <br>
     <div class="chat">
+        <div class="message sent">
+            <p>Hi, Ask me question and I'll give you answers from the PDF!</p>
+        </div>
         <div class="message received">
            
-        </div>
-        <div class="message sent">
-            <p>Hi, I'm having trouble with my account.</p>
         </div>
     </div>    
     <div class="user-input">
       <input type="text" id="input-text" placeholder="Enter your question?">
-       <button class="send-text" id="create-p-elements"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" id="send"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M3.4 20.4l17.45-7.48c.81-.35.81-1.49 0-1.84L3.4 3.6c-.66-.29-1.39.2-1.39.91L2 9.12c0 .5.37.93.87.99L17 12 2.87 13.88c-.5.07-.87.5-.87 1l.01 4.61c0 .71.73 1.2 1.39.91z"></path></svg></button>
+       <button class="send-text" id="create-p-elements" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" id="send"><path fill="none" d="M0 0h24v24H0V0z"></path><path d="M3.4 20.4l17.45-7.48c.81-.35.81-1.49 0-1.84L3.4 3.6c-.66-.29-1.39.2-1.39.91L2 9.12c0 .5.37.93.87.99L17 12 2.87 13.88c-.5.07-.87.5-.87 1l.01 4.61c0 .71.73 1.2 1.39.91z"></path></svg></button>
     </div>
-
-
-
-
 
     <script src="../static/js/chat.js"></script>
 </body>
