--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,8 +89,9 @@ outline: none;
  
 header{
   width: 100%;
-  padding: 10px;
+  /* padding: 10px; */
   display: flex;
+  height: 100px;
   align-items: center;
   position: fixed;
   justify-content: center;
@@ -102,7 +103,10 @@ header{
 
   border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
-
+header img{
+  height: 90px;
+  scale: 1.4;
+}
 
  
 .introduction{
@@ -116,6 +120,7 @@ header{
 .content{
   width: 70%;
   margin: 35px;
+  margin-top: 100px;
 }
 .geni{
   height: 300px;
