--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-    <header>KnowledGenie.</header>
+    <header><img src="../static/images/logo-removebg-preview.png" alt=""></header>
     <div class="introduction">
         <div class="content">
         <h1>Get the Answer to Your Question in Seconds!</h1>
